--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@pdftron/webviewer": "^8.0.0",
     "firebase": "^8.9.0",
+    "firebase-admin": "^9.12.0",
+    "firebase-functions": "^3.15.7",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.0-beta.5",
